cleaning up code, got rid of some any types, added admin variable, added restaurant fetch to admin page, fixed spacing on landing page

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ html, body {
 #ipadImg {
   max-width: 100%;
   width: 600px;
-  min-width: 320px;
+  min-width: 250px;
   object-fit:fill;
 }
 
@@ -324,5 +324,18 @@ html, body {
   }
   #appName {
     font-size: 1.8rem;
+  }
+  .salesText {
+    border-radius: 0px;
+  }
+  #wideBtn {
+    border-radius: 0px;
+  }
+
+}
+
+@media only screen and (min-width: 960px) {
+  #landingImgGrid {
+    padding-right: 40px;
   }
 }
